@@ -37,6 +37,7 @@ lib/gecoder/interface/constraints/bool_var_constraints.rb -text
 lib/gecoder/interface/constraints/int/domain.rb -text
 lib/gecoder/interface/constraints/int/linear.rb -text
 lib/gecoder/interface/constraints/int_enum/distinct.rb -text
+lib/gecoder/interface/constraints/int_enum/equality.rb -text
 lib/gecoder/interface/constraints/int_enum_constraints.rb -text
 lib/gecoder/interface/constraints/int_var_constraints.rb -text
 lib/gecoder/interface/constraints/reifiable_constraints.rb -text
@@ -52,6 +53,7 @@ specs/constraints/constraint_helper.rb -text
 specs/constraints/constraints.rb -text
 specs/constraints/distinct.rb -text
 specs/constraints/domain.rb -text
+specs/constraints/equality.rb -text
 specs/constraints/linear.rb -text
 specs/constraints/reification_sugar.rb -text
 specs/constraints/relation.rb -text
