@@ -29,3 +29,4 @@ module Gecode
 end
 
 require 'gecoder/interface/constraints/int_enum/distinct'
+require 'gecoder/interface/constraints/int_enum/equality'
