@@ -2,6 +2,7 @@
 
 * [#11861] Fixed a bug stopping the creating of int variables with non-range domains.
 * Added domain constraints for int variables.
+* Added equality constraint for int enums.
 
 == Version 0.3.0
 
